--- a/UpGunModLoader.csproj
+++ b/UpGunModLoader.csproj
@@ -24,11 +24,34 @@
     <Reference Include="QueenIO">
       <HintPath>QueenIO.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Core" />
     <Reference Include="UAssetAPI">
       <HintPath>UAssetAPI.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="UpGunModLoader3._0.ContentForms.Upload_Mod.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UpGunModLoader3._0.ContentForms.Upload_Mod.resx</DependentUpon>
+    </Compile>
+    <Compile Update="UpGun_Mod_Loader.Autres.Notifs.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>UpGun_Mod_Loader.Autres.Notifs.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="UpGunModLoader3._0.ContentForms.Upload_Mod.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UpGunModLoader3._0.ContentForms.Upload_Mod.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="UpGun_Mod_Loader.Autres.Notifs.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>UpGun_Mod_Loader.Autres.Notifs.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
